--- a/src/main/index.css
+++ b/src/main/index.css
@@ -64,3 +64,15 @@
   color: inherit;
   text-decoration: none;
 }
+
+.product-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+
+.product-date {
+  font-size: 12px;
+  color: rgb(136, 136, 136);
+}
