--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,11 +1,10 @@
 #banner {
-  height: 300px;
-  background-color: yellow;
+  max-height: 300px;
 }
 
 #banner > img {
   width: 100%;
-  height: 300px;
+  max-height: 300px;
 }
 
 #body > h1 {
@@ -27,6 +26,16 @@
   border-radius: 12px;
   overflow: hidden;
   position: relative;
+}
+
+.product-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ffffffaa;
+  pointer-events: none;
 }
 
 .product-img {
@@ -75,4 +84,8 @@
 .product-date {
   font-size: 12px;
   color: rgb(136, 136, 136);
+}
+
+#product-headline {
+  margin-top: 8px;
 }
