--- a/src/upload/index.css
+++ b/src/upload/index.css
@@ -38,3 +38,10 @@
   border: none;
   margin-top: 16px;
 }
+
+#upload-img {
+  width: 200px;
+  height: 200px;
+  margin-left: 16px;
+  object-fit: contain; /* 가로세로 비율을 맞춰줌 */
+}
